--- a/src/main/webapp/pages/teamc_contract2/mainPage.html
+++ b/src/main/webapp/pages/teamc_contract2/mainPage.html
@@ -320,13 +320,13 @@
                                         </div>              
                                     </div>
                                     <div class = "col-sm-2" style="">
-                                        <div style="text-align: center;">{{product.price}}</div>            
+                                        <div style="text-align: center;">{{product.price}} INR</div>            
                                     </div>
                                     <div class = "col-sm-2" style="">
                                         <div style="text-align: center;">{{product.quantity}}</div>         
                                     </div>
                                     <div class = "col-sm-2" style="">
-                                        <div style="text-align: center;">{{product.price * product.quantity}}</div>
+                                        <div style="text-align: center;">{{product.price * product.quantity}} INR</div>
                                     </div>
                                 </div>
                             </div>
@@ -361,7 +361,7 @@
               		                        </div>
                     	            	</td>
                                 		<td id="module_section_td2">
-                                			<div id="module_section_div2" style="overflow-y: hidden; padding-top:25px;">{{totalPrice}}</div>
+                                			<div id="module_section_div2" style="overflow-y: hidden; padding-top:25px;">{{totalPrice}} INR</div>
                                 		</td>
                                 	</tr>
                                 	<tr id="module_section_tr">
