--- a/src/main/webapp/pages/teame_funding/ListofPO.html
+++ b/src/main/webapp/pages/teame_funding/ListofPO.html
@@ -116,7 +116,7 @@ opacity: 0.9;
     </style>
 </head>
 
-<body ng-app="list_of_PO" ng-controller="listofPOSeller">
+<body ng-app="list_of_PO" ng-controller="listofPOSeller" ng-init="SellerPOList()">
 
     <div id="wrapper">
 
