--- a/src/main/webapp/pages/teamb_contract1/createProposal.html
+++ b/src/main/webapp/pages/teamb_contract1/createProposal.html
@@ -2,49 +2,29 @@
 <html lang="en">
 
 <head>
-
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Create Proposal</title>
-
+<title>Supply Chain Finance - Contract Management 1</title>
 <!-- Bootstrap Core CSS -->
-<link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- MetisMenu CSS -->
-<link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
-
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link href="../../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
 <!-- Custom CSS -->
-<link href="../dist/css/sb-admin-2.css" rel="stylesheet">
-
+<link href="../../dist/css/sb-admin-2.css" rel="stylesheet">
 <!-- Morris Charts CSS -->
-<link href="../vendor/morrisjs/morris.css" rel="stylesheet">
-
+<link href="../../vendor/morrisjs/morris.css" rel="stylesheet">
 <!-- Custom Fonts -->
-<link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<script data-require="angular.js@*" data-semver="1.4.0-beta.4" src="https://code.angularjs.org/1.4.0-beta.4/angular.js"></script>
-
-
-
-
-
-
-    <style type="text/css">
+<link href="../../vendor/font-awesome/css/font-awesome.min.css"
+	rel="stylesheet" type="text/css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ <style type="text/css">
       #hey:hover {
         opacity: 0.9;
       }
@@ -100,7 +80,15 @@
       border: 1px solid black;
 
 }
-
+#module_section_div1 {
+	border: 1px solid #cccccd;
+	height: 42px;
+	padding: 10px 48px;
+	border-radius: 3px;
+	background-color: #cccccc;
+	font-weight: bold;
+	font-size: 16px;
+}
 
 
     
@@ -177,8 +165,10 @@ var finalJSON;
             //  alert("hisfgdsga="+jFinalJSON);
 
               promise.then(function(response){  
-                consloe.log("hi response recieved");            
+                console.log("hi response recieved");            
                 console.log(response); 
+				window.location="viewAllProposals.html";
+				
               },function(response){
                 console.log("error");
                 console.log(response);
@@ -370,14 +360,11 @@ console.log("Display");
      <div style="margin-top: 10px">
             <div style="margin-left: 10px; margin-right: 260px;">
                 <div class="jumbotron" style=" overflow:scroll;height:800px; border-radius: 10px; text-align: left;">
-<div class="col-sm-12" style="text-align: center;">
-                <br><br>
-                    <p style="font-size: 150%; 
-                    color: black ;font-family: Verdana">
-                    <b>WELCOME TO THE CREATE PROPOSAL PAGE</b></p>
-        <br>
-        <br>
-</div>
+<div class="panel panel-default">
+						<div class="panel-heading" id="module_section_div1"
+							style="margin-top: 0px; text-align: center; font-size: 24px; padding-bottom: 40px;">
+							CREATE PROPOSAL</div>
+					</div>
   
 
   <br><br>
@@ -739,31 +726,6 @@ var finalJSON;
 
 
 </script>
-
-
-
-
-
-
-
-
- <!--          
-<script src="../vendor/jquery/jquery.min.js"></script>
-
-<! Bootstrap Core JavaScript >
-<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-
-<! Metis Menu Plugin JavaScript >
-<script src="../vendor/metisMenu/metisMenu.min.js"></script>
-
-<! Morris Charts JavaScript >
-<script src="../vendor/raphael/raphael.min.js"></script>
-<script src="../vendor/morrisjs/morris.min.js"></script>
-<script src="../data/morris-data.js"></script>
-
-<! Custom Theme JavaScript >
-<script src="../dist/js/sb-admin-2.js"></script>
--->
 
 </body>
 
