--- a/src/main/webapp/pages/teamd_payments/AMLTable.html
+++ b/src/main/webapp/pages/teamd_payments/AMLTable.html
@@ -61,7 +61,7 @@
             .MyInputSpan {
                 border-radius: 20px 0px 0px 20px; 
                 width:310px;
-                background-color: #6CC0EC;
+                background-color: #7E7979;
                 color:black; 
                 border:0px;
             }
@@ -125,18 +125,18 @@
                 padding: 12px;
             }
             .btnss{
-                background-color:#6CC0EC ;
+                background-color:#7E7979 ;
                 text-align: center;
-                color: white;
+                color: BLACK;
                 font-size: 18px;
                 margin-right:10px;
                 margin-left:10px;
             }
             
             .btnss1{
-                background-color:#6CC0EC ;
+                background-color:#7E7979 ;
                 text-align: center;
-                color: white;
+                color: BLACK;
                 font-size: 10px;
                 margin-right:10px;
                 margin-left:10px;
@@ -340,7 +340,7 @@
             background-color:#cccccc">
 
              <div class="row">
-                <div class="col-sm-12" style="background-color:#6CC0EC; 
+                <div class="col-sm-12" style="background-color:#7E7979; 
                 order-radius: 20px 20px 0px 0px;">
                 <br><br>
                     <p style="font-size: 300%; 
