--- a/src/main/webapp/pages/teamd_payments/Swiftmt103Confirmation.html
+++ b/src/main/webapp/pages/teamd_payments/Swiftmt103Confirmation.html
@@ -116,7 +116,6 @@
 
             table, th, td {
                 text-align: center;
-                border: 1px solid black;
                 background-color: white;
                 border-radius: 20px;
             }
@@ -124,9 +123,9 @@
                 padding: 15px;
             }
             .btnss{
-                background-color:#3383FF ;
+                background-color:#7E7979 ;
                 text-align: center;
-                color: white;
+                color: BLACK;
                 font-size: 18px;
                 margin-right: 4px;
                 margin-left:35px;
@@ -309,14 +308,14 @@
             height:1100px; 
             border-radius: 20px; 
             text-align: center; 
-            background-color:#555">
+            background-color:#CCCCCC">
 
              <div class="row">
-                <div class="col-sm-12" style="background-color:#337ab7; b
+                <div class="col-sm-12" style="background-color:#7E7979; b
                 order-radius: 20px 20px 0px 0px;">
                 <br><br>
                     <p style="font-size: 300%; 
-                    color: white">
+                    color: BLACK">
                     <b>SWIFT MT-103 CONFIRMATION</b></p>
                 </div>
             </div>
