--- a/src/main/webapp/pages/teamd_payments/payment.html
+++ b/src/main/webapp/pages/teamd_payments/payment.html
@@ -61,13 +61,13 @@
             .MyInputSpan {
                 border-radius: 20px 0px 0px 20px; 
                 width:280px;
-                background-color: #337ab7;
-                color:#f5f5f5; 
+                background-color: #7E7979;
+                color:black; 
                 border:0px;
             }
             .MyInputField{
                 border:0px;
-
+				
                 background-color: #fff;
                 border-radius: 0px 20px 20px 0px;
                 color:#555;
@@ -317,11 +317,11 @@
 
     <div style="margin-top: 10px">
         <div class="row">
-            <div class="col-sm-offset-1 col-sm-8 jumbotron" id="alignMain" style="padding-top:0px; height:800px; border-radius: 20px; text-align: center; background-color:#555">
+            <div class="col-sm-offset-1 col-sm-8 jumbotron" id="alignMain" style="padding-top:0px; height:800px; border-radius: 20px; text-align: center; background-color:#A2A2A2">
 
              <div class="row">
-                <div class="col-sm-12" style="background-color:#337ab7; border-radius: 20px 20px 0px 0px;"><br><br>
-                    <p style="font-size: 300%; color: white"><b>PAYMENT PORTAL</b></p>
+                <div class="col-sm-12" style="background-color:#7E7979; border-radius: 20px 20px 0px 0px;"><br><br>
+                    <p style="font-size: 300%; color: black"><b>PAYMENT PORTAL</b></p>
                 </div>
             </div>
             <br><br>
