--- a/src/main/webapp/pages/teamd_payments/paymentDetails.html
+++ b/src/main/webapp/pages/teamd_payments/paymentDetails.html
@@ -118,7 +118,6 @@
 
             table, th, td {
                 text-align: center;
-                border: 1px solid black;
                 background-color: white;
                 border-radius: 20px 20px 20px 20px;
             }
@@ -309,14 +308,14 @@
             height:70%; 
             border-radius: 20px; 
             text-align: center; 
-            background-color:#555">
+            background-color:#cccccc">
 
              <div class="row">
-                <div class="col-sm-12" style="background-color:#337ab7; b
+                <div class="col-sm-12" style="background-color:#7E7979; b
                 order-radius: 20px 20px 0px 0px;">
                 <br><br>
                     <p style="font-size: 300%; 
-                    color: white">
+                    color: black">
                     <b>TRANSACTION HISTORY</b></p>
                 </div>
             </div>
