--- a/src/main/webapp/pages/teamd_payments/uploadFXData.html
+++ b/src/main/webapp/pages/teamd_payments/uploadFXData.html
@@ -129,9 +129,9 @@
             }
 
             .btnss{
-                background-color:#3383FF ;
+                background-color:#7E7979 ;
                 text-align: center;
-                color: white;
+                color: BLACK;
                 margin-right: 4px;
                 margin-left:35px;
                 font-size: 18px;
@@ -305,14 +305,14 @@
             height:400px; 
             border-radius: 20px; 
             text-align: center; 
-            background-color:#555">
+            background-color:#CCCCCC">
 
              <div class="row">
-                <div class="col-sm-12" style="background-color:#337ab7; b
+                <div class="col-sm-12" style="background-color:#7E7979; b
                 order-radius: 20px 20px 0px 0px;">
                 <br><br>
                     <p style="font-size: 300%; 
-                    color: white">
+                    color: BLACK">
                     <b>FX DATA</p>
                 </div>
             </div>
