--- a/src/main/webapp/pages/teamd_payments/confirmFinancialInstData.html
+++ b/src/main/webapp/pages/teamd_payments/confirmFinancialInstData.html
@@ -59,8 +59,8 @@
             .MyInputSpan {
                 border-radius: 20px 0px 0px 20px; 
                 width:310px;
-                background-color: #337ab7;
-                color:#f5f5f5; 
+                background-color: #7E7979;
+                color:BLACK; 
                 border:0px;
             }
             .MyInputField{
@@ -116,7 +116,6 @@
 
             table, th, td {
                 text-align: center;
-                border: 1px solid black;
                 background-color: white;
                 border-radius: 20px;
             }
@@ -124,9 +123,9 @@
                 padding: 15px;
             }
             .btnss{
-                background-color:#3383FF ;
+                background-color:#7E7979 ;
                 text-align: center;
-                color: white;
+                color: BLACK;
                 margin-right: 4px;
                 margin-left:35px;
                 font-size: 18px;
@@ -137,7 +136,7 @@
                 height:825px; 
                 border-radius: 20px; 
                 text-align: center; 
-                background-color:#555;                                                                                                                       
+                background-color:#CCCCCC;                                                                                                                       
             }
 
             
@@ -308,11 +307,11 @@
             <div class="col-sm-offset-1 col-sm-8 jumbotron" id="alignMain" >
 
              <div class="row">
-                <div class="col-sm-12" style="background-color:#337ab7; b
+                <div class="col-sm-12" style="background-color:#7E7979; b
                 order-radius: 20px 20px 0px 0px;">
                 <br><br>
                     <p style="font-size: 300%; 
-                    color: white">
+                    color: BLACK">
                     <b>CONFIRM DETAILS</b></p>
                 </div>
             </div>
