--- a/src/main/webapp/pages/teamd_payments/createFinancialInstitution.html
+++ b/src/main/webapp/pages/teamd_payments/createFinancialInstitution.html
@@ -59,8 +59,8 @@
             .MyInputSpan {
                 border-radius: 20px 0px 0px 20px; 
                 width:310px;
-                background-color: #337ab7;
-                color:#f5f5f5; 
+                background-color: #7E7979;
+                color:BLACK; 
                 border:0px;
             }
             .MyInputField{
@@ -121,9 +121,9 @@
             }
 
             .btnss{
-                background-color:#3383FF ;
+                background-color:#7E7979 ;
                 text-align: center;
-                color: white;
+                color: BLACK;
                 margin-right: 4px;
                 margin-left:35px;
                 font-size: 18px;
@@ -298,14 +298,14 @@
             height:850px; 
             border-radius: 20px; 
             text-align: center; 
-            background-color:#555">
+            background-color:#CCCCCC">
 
              <div class="row">
-                <div class="col-sm-12" style="background-color:#337ab7; b
+                <div class="col-sm-12" style="background-color:#7E7979; b
                 order-radius: 20px 20px 0px 0px;">
                 <br><br>
                     <p style="font-size: 300%; 
-                    color: white">
+                    color: BLACK">
                     <b>CREATE FINANCIAL INSTITUTION</b></p>
                 </div>
             </div>
