--- a/src/main/webapp/pages/teamd_payments/staticData.html
+++ b/src/main/webapp/pages/teamd_payments/staticData.html
@@ -59,8 +59,8 @@
             .MyInputSpan {
                 border-radius: 20px 0px 0px 20px; 
                 width:310px;
-                background-color: #337ab7;
-                color:#f5f5f5; 
+                background-color: #7E7979;
+                color:BLACK; 
                 border:0px;
             }
             .MyInputField{
@@ -116,7 +116,6 @@
 
             table, th, td {
                 text-align: center;
-                border: 1px solid black;
                 background-color: white;
                 border-radius: 20px;
             }
@@ -124,9 +123,9 @@
                 padding: 25px;
             }
             .createInstitutions{
-                background-color:#3383FF ;
+                background-color:#7E7979 ;
                 text-align: center;
-                color: white;
+                color: BLACK;
             }
 
             
@@ -301,14 +300,14 @@
             height:650px; 
             border-radius: 20px; 
             text-align: center; 
-            background-color:#555">
+            background-color:#CCCCCC">
 
              <div class="row">
-                <div class="col-sm-12" style="background-color:#337ab7; b
+                <div class="col-sm-12" style="background-color:#7E7979; b
                 order-radius: 20px 20px 0px 0px;">
                 <br><br>
                     <p style="font-size: 300%; 
-                    color: white">
+                    color: BLACK">
                     <b>STATIC DATA</b></p>
                 </div>
             </div>
