--- a/src/main/webapp/pages/teamd_payments/swiftMT103.html
+++ b/src/main/webapp/pages/teamd_payments/swiftMT103.html
@@ -85,8 +85,8 @@ label {
             .MyInputSpan {
                 border-radius: 20px 0px 0px 20px; 
                 width:310px;
-                background-color: #337ab7;
-                color:#f5f5f5; 
+                background-color: #7E7979;
+                color:BLACK; 
                 border:0px;
             }
             .MyInputField{
@@ -130,9 +130,9 @@ label {
                 text-align: center;
             }
             .btnss{
-                background-color:#3383FF ;
+                background-color:#7E7979 ;
                 text-align: center;
-                color: white;
+                color: BLACK;
                 font-size: 18px;
                 margin-right: 4px;
                 margin-left:35px;
@@ -340,14 +340,14 @@ label {
             height:70%; 
             border-radius: 20px; 
             text-align: center; 
-            background-color:#555">
+            background-color:#CCCCCC">
 
              <div class="row">
-                <div class="col-sm-12" style="background-color:#337ab7; 
+                <div class="col-sm-12" style="background-color:#7E7979; 
                 	border-radius: 20px 20px 0px 0px;">
                 <br><br>
                     <p style="font-size: 300%; 
-                    color: white">
+                    color: BLACK">
                     <b>SWIFT MESSAGE</b></p>
                 </div>
             </div>
