--- a/src/main/webapp/pages/teamd_payments/baseCurrency.html
+++ b/src/main/webapp/pages/teamd_payments/baseCurrency.html
@@ -32,6 +32,7 @@
 
   <!-- Angular Material Library -->
   	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+    <script src="../../js/commonResources.js"></script>
     
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -409,8 +410,6 @@
 <!-- Custom Theme JavaScript -->
 <script src="../../dist/js/sb-admin-2.js"></script>
 
-
-</script>
 
 </body>
 
