--- a/src/main/webapp/pages/teamd_payments/swiftMT103.html
+++ b/src/main/webapp/pages/teamd_payments/swiftMT103.html
@@ -31,7 +31,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
   	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
  	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
-
+	<script src="../../js/commonResources.js"></script>
+    
   <!-- Angular Material Library -->
   	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
     
@@ -583,7 +584,7 @@ label {
 
 	app.controller('swftctrl', function($scope, $http){
 		$scope.v2 = true; $scope.v1=false;
-    	$http.get("http://localhost:8089/scm/service/Transactions/getCurrentTransaction").then(function(response){
+    	$http.get(BASE_PATH+"/service/Transactions/getCurrentTransaction").then(function(response){
     	 	var prefill = response.data;
        		$scope.sender = prefill.sender;
         	$scope.type = prefill.message_code;
@@ -615,7 +616,7 @@ label {
 			
 			$http({
 	            method: 'POST',
-	            url: 'http://localhost:8089/scm/service/Transactions/submitSwiftMessage',
+	            url: BASE_PATH+'/service/Transactions/submitSwiftMessage',
 	            headers: {'Content-Type': 'text/plain'},
 	            data: {
 	            	sender : $scope.sender,
