--- a/src/main/webapp/pages/teamd_payments/uploadFXData.html
+++ b/src/main/webapp/pages/teamd_payments/uploadFXData.html
@@ -29,7 +29,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
   	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
  	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
-
+	<script src="../../js/commonResources.js"></script>
+    
   <!-- Angular Material Library -->
   	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
     
