--- a/src/main/webapp/pages/invoice/InvoiceLanding.html
+++ b/src/main/webapp/pages/invoice/InvoiceLanding.html
@@ -83,9 +83,9 @@
    		</div>
    		<div>	
    		<fieldset>
-   			<legend><b>Draft Invoices</b></legend>
+   			<legend><b>Approved Invoices</b></legend>
    				<br>
-   				<button ng-click="draftInvoicefunc()">Click to get your invoices</button>
+   				<button ng-click="viewapproved()">Click to get your invoices</button>
    				<a href="" onclick="myFunction2()">{{message2}}</a>
    				<br>
    				<div id="demo2" style="display:none">
@@ -100,7 +100,7 @@
    							<th>Status</th>
    							<th>Click to view Invoices</th>
    						</tr>
-   						<tr ng-repeat="i in invoicelist1">
+   						<tr ng-repeat="i in invoicelist2">
    							<td>{{i.invoiceID}}</td>
    							<td>{{i.billbookNo}}</td>
    							<td>{{i.contractID}}</td>
@@ -108,11 +108,11 @@
    							<td>{{i.sellerID}}</td>
    							<td>{{i.invoiceAmount}}</td>
    							<td>{{i.approvalStatus}}</td>
-   							<td><input type="checkbox" ng-click="viewfunc(i.invoiceID)"/></td>
+   							<td><input type="checkbox" ng-click="viewfunc1(i.billbookNo,i.invoiceID)"/></td>
    					</tr>
    					<tr>
    							<td></td><td></td><td></td><td></td><td></td><td></td><td></td>
-   							<td><button onclick="toggleview2()">View</button></td>
+   							<td><button onclick="toggleview3()">View</button></td>
    					</table>
    					
    				</div>
@@ -228,6 +228,63 @@
    				<button ng-click="savedraftfunc()">Approve</button>
    				<button ng-click="sendtoapproval()">Reject</button> 
    				-->
+   				<br>
+   				<div style="color:blue">{{draftstatus}}</div>
+   				<br>
+   				<button><a href="InvoiceIndex.html">Go to Home</a></button>
+   				</br>
+   				</br>
+   				</br>
+   				</br>
+   		</div>
+   		</div>
+   		<div id="view3" style="display:none">
+   			<div><b>View Of Invoices</b>
+   			<fieldset>
+   			<legend><b>Invoices Details</b></legend>
+   			</br>
+ 			<table border=1 class="table table-striped table-bordered table-hover">
+				<tr><td>Invoice No:&emsp;</td><td>{{invoice.invoiceID}}&emsp;&emsp;&emsp;&emsp;</td><td>Bill Book No:&emsp;</td><td>{{invoice.billbookNo}}</td></tr>
+
+				<tr><td>Contract/PO No:&emsp;</td><td>{{invoice.contractID}}&emsp;&emsp;&emsp;&emsp;</td><td>Invoice Amount:&emsp;</td><td>{{invoice.invoiceAmount}}</td></tr>
+				<tr><td>Buyer:&emsp;</td><td>{{invoice.buyerID}}&emsp;&emsp;&emsp;&emsp;</td><td>Seller:&emsp;</td><td>{{invoice.sellerID}}</td></tr>
+				<tr><td>Invoice Created Date:&emsp;</td><td>{{invoice.invoiceCreatedDate}}&emsp;&emsp;&emsp;&emsp;</td><td>Payment Date:&emsp;</td><td>{{invoice.paymentDate}}</td></tr>
+                <tr><td>Invoice Due Date:&emsp;</td><td>{{invoice.invoiceDueDate}}&emsp;&emsp;&emsp;&emsp;</td><td></td><td></td></tr>
+			</table>
+			</br>
+
+   			</fieldset>
+   			</br>
+   			<br>
+   			<fieldset>
+   			<legend><b>Product Details</b></legend>
+   			<br>
+   			<br>
+   			<table  border=1 class="table table-striped table-bordered table-hover">
+   					<tr>
+
+   						<th>Product Id</th>
+   						<th>Quantity</th>
+   						<th>Unit Price</th>
+   						<th> Unit Tax</th>
+   						<th>Gross Amount</th>
+   						<th>Tax</th>
+   						<th>Net Amount</th>
+   					</tr>
+   					<tr ng-repeat="p in productslist">
+   						<td>{{p.productID}}</td>
+   						<td>{{p.quantity}}</td>
+   						<td>{{p.unitprice}}</td>
+   						<td>{{p.tax}}</td>
+   						<td>{{p.grossAmount}}</td>
+   						<td>{{p.tax +p.grossAmount}}</td>
+   						<td>{{p.netAmount}}</td>
+                    </tr>
+                    <tr><td colspan="5" border="0"></td><td><b>Total</b></td><td>{{invoice.invoiceAmount}}</td></tr>
+   				</table>
+   				</br>
+   				</fieldset>
+   				<button ng-click="availfinance(invoice.invoiceID)">Avail Finance</button>
    				<br>
    				<div style="color:blue">{{draftstatus}}</div>
    				<br>
