--- a/src/main/webapp/pages/teame_funding/failure_reasons.html
+++ b/src/main/webapp/pages/teame_funding/failure_reasons.html
@@ -78,7 +78,7 @@ opacity: 0.9;
             margin:auto; padding:5px;
             padding-left:20px;
             padding-right:20px;
-            background-color:#469c2a;
+            background-color:#898989;
             box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.2);
             color:rgba(255,255,255,0.9);
             border:0px;
