--- a/src/main/webapp/pages/teame_funding/purchase_request.html
+++ b/src/main/webapp/pages/teame_funding/purchase_request.html
@@ -68,7 +68,7 @@ opacity: 0.9;
         .MyInputSpan {
             border-radius: 20px 0px 0px 20px; 
             width:40%;
-            background-color: #337ab7;
+            background-color: #a9a9a9;
             color:#f5f5f5; 
             border:0px;
         }
@@ -92,7 +92,7 @@ opacity: 0.9;
             margin:auto; padding:5px;
             padding-left:20px;
             padding-right:20px;
-            background-color:#469c2a;
+            background-color:#898989;
             box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.2);
             color:rgba(255,255,255,0.9);
             border:0px;
@@ -106,7 +106,7 @@ opacity: 0.9;
             margin:auto; padding:5px;
             padding-left:20px;
             padding-right:20px;
-            background-color:#469c2a;
+            background-color:#898989;
             box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.2);
             color:rgba(255,255,255,0.9);
             border:0px;
@@ -210,7 +210,7 @@ opacity: 0.9;
                             <div style="overflow: auto;" >
                                 <a href="#" style="float: left" class="UserName"><h3>Welcome<br>User Name</h3></a>
 
-                                <i style="float: right; padding-right: 10px; padding-top: 5%; padding-bottom: 5%; color:#337ab7;" class="fa fa-user fa-5x"></i>  
+                                <i style="float: right; padding-right: 10px; padding-top: 5%; padding-bottom: 5%; color:#a9a9a9;" class="fa fa-user fa-5x"></i>  
                                
                                 <a class="UserName" style="float: left; padding-bottom:2px">You are a Customer</a>
                             </div>
@@ -270,10 +270,10 @@ opacity: 0.9;
 
         <div style="margin-top: 10px">
             <div class="row">
-                <div class="col-sm-offset-1 col-sm-8 jumbotron" style="padding-top:0px; height:auto; border-radius: 20px; text-align: center; background-color:#555">
+                <div class="col-sm-offset-1 col-sm-8 jumbotron" style="padding-top:0px; height:auto; border-radius: 20px; text-align: center; background-color:#d3d3d3">
                     <div class="row">
-                        <div class="col-sm-12" style="background-color:#337ab7; border-radius: 20px 20px 0px 0px;"><br><br>
-                            <p style="font-size: 250%; color: white"><b>FUNDING MANAGEMENT</b></p>
+                        <div class="col-sm-12" style="background-color:#a9a9a9; border-radius: 20px 20px 0px 0px;"><br><br>
+                            <p style="font-size: 250%; color: black"><b>FUNDING MANAGEMENT</b></p>
                         </div>
                     </div>
                     <div class="container">
@@ -287,7 +287,7 @@ opacity: 0.9;
                                 </ul>
                             </div>-->
                             <div class="col-md-12">
-                                <h2 style="color: white"> PURCHASE REQUEST </h2>                                
+                                <h2 style="color: black"> PURCHASE REQUEST </h2>                                
                             </div>
                             <div class="col-md-6">
                                 <form>
@@ -404,7 +404,7 @@ opacity: 0.9;
 
                         <div class="row">
                             <div class="col-md-12">
-                                <h2 style="color: white">INVOICE LIST</h2>
+                                <h2 style="color: black">INVOICE LIST</h2>
                             </div>
                             <div>
                                 <table class="table table-striped" style="overflow-y:scroll;">
@@ -451,7 +451,7 @@ opacity: 0.9;
                                     </div> 
                        <div style="margin-top: 20px;" id="LoginSubmitDiv">
                                         <form id="process1">
-                                        <input type="submit" name="process" value="Process" id="lol" class="btn btn-primary" ng-click="processPR()">
+                                        <input type="submit" name="process" value="Process" id="search" class="btn btn-primary" ng-click="processPR()">
                                         </form>
                                     </div>             
                     </div>
