--- a/src/main/webapp/pages/teame_funding/SellerBuyerLandingPage.html
+++ b/src/main/webapp/pages/teame_funding/SellerBuyerLandingPage.html
@@ -60,7 +60,7 @@ input:focus {
 .MyInputSpan {
 	border-radius: 20px 0px 0px 20px;
 	width: 40%;
-	background-color: #337ab7;
+	background-color: #a9a9a9;
 	color: #f5f5f5;
 	border: 0px;
 }
@@ -87,7 +87,7 @@ input:focus {
 	padding: 5px;
 	padding-left: 20px;
 	padding-right: 20px;
-	background-color: #469c2a;
+	background-color: #898989;
 	box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.2);
 	color: rgba(255, 255, 255, 0.9);
 	border: 0px;
@@ -183,7 +183,7 @@ input:focus {
 									<a href="#" style="float: left" class="UserName"><h3>
 											Welcome<br>User Name
 										</h3></a> <i
-										style="float: right; padding-right: 10px; padding-top: 5%; padding-bottom: 5%; color: #337ab7;"
+										style="float: right; padding-right: 10px; padding-top: 5%; padding-bottom: 5%; color: #a9a9a9;"
 										class="fa fa-user fa-5x"></i> <a class="UserName"
 										style="float: left; padding-bottom: 2px">You are a
 										Customer</a>
@@ -226,10 +226,10 @@ input:focus {
 		<div style="margin-top: 10px">
 			<div class="row">
 				<div class="col-sm-offset-1 col-sm-8 jumbotron"
-					style="padding-top: 0px; height: 800px; border-radius: 20px; text-align: center; background-color: #555">
+					style="padding-top: 0px; height: 800px; border-radius: 20px; text-align: center; background-color: #d3d3d3">
 					<div class="row">
 						<div class="col-sm-12"
-							style="background-color: #337ab7; border-radius: 20px 20px 0px 0px;">
+							style="background-color: #a9a9a9; border-radius: 20px 20px 0px 0px;">
 							<br> <br>
 							<p style="font-size: 300%; color: white">
 								<b>FUNDING MANAGEMENT</b>
