--- a/src/main/webapp/pages/teame_funding/porderlist_bankuser.html
+++ b/src/main/webapp/pages/teame_funding/porderlist_bankuser.html
@@ -50,14 +50,14 @@ opacity: 0.9;
             outline-color:transparent;
         }
         .FormInputLabels {
-            background-color: white; color: #555; float: left; width:48% ;border-right: 1px solid gray; text-align: center;  opacity: 0.6;
+            background-color: black; color: #555; float: left; width:48% ;border-right: 1px solid gray; text-align: center;  opacity: 0.6;
         }
         .FormTextInputs {
             border: 0px; margin-left: 1%;
             width: 50%; float:left; color: #555
         }
         .FormInputs {
-            overflow:hidden; padding:5px; background-color:white; border: 0px; border-radius: 20px; box-shadow: 0 2px 16px 1px rgba(0,0,0, 0.3);
+            overflow:hidden; padding:5px; background-color:black; border: 0px; border-radius: 20px; box-shadow: 0 2px 16px 1px rgba(0,0,0, 0.3);
         }
         
         .MyInputDiv {
@@ -93,7 +93,7 @@ opacity: 0.9;
             margin:auto; padding:5px;
             padding-left:20px;
             padding-right:20px;
-            background-color:#469c2a;
+            background-color:#898989;
             box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.2);
             color:rgba(255,255,255,0.9);
             border:0px;
@@ -107,7 +107,7 @@ opacity: 0.9;
             margin:auto; padding:5px;
             padding-left:20px;
             padding-right:20px;
-            background-color:#469c2a;
+            background-color:#898989;
             box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.2);
             color:rgba(255,255,255,0.9);
             border:0px;
@@ -240,8 +240,11 @@ opacity: 0.9;
                             <a href="#"> Purchase Order <i class="fa fa-file-text-o"></i>   <span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="panels-wells.html">Review</a>
+                                    <a href="http://localhost:8090/scm/pages/teame_funding/porderlist_bankuser.html">List</a>
                                 </li> 
+                                <li>
+                                    <a href="http://localhost:8090/scm/pages/teame_funding/libor.html">LIBOR</a>
+                                </li>
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
@@ -271,10 +274,10 @@ opacity: 0.9;
 
         <div style="margin-top: 10px">
             <div class="row">
-                <div class="col-sm-offset-1 col-sm-8 jumbotron" style="padding-top:0px; height:800px; border-radius: 20px; text-align: center; background-color:#555">
+                <div class="col-sm-offset-1 col-sm-8 jumbotron" style="padding-top:0px; height:800px; border-radius: 20px; text-align: center; background-color:#D3D3D3">
                     <div class="row">
-                        <div class="col-sm-12" style="background-color:#337ab7; border-radius: 20px 20px 0px 0px;"><br><br>
-                            <p style="font-size: 250%; color: white"><b>FUNDING MANAGEMENT</b></p>
+                        <div class="col-sm-12" style="background-color:#A9A9A9; border-radius: 20px 20px 0px 0px;"><br><br>
+                            <p style="font-size: 250%; color: black"><b>FUNDING MANAGEMENT</b></p>
                         </div>
                     </div>
                     <div class="container">
@@ -288,11 +291,11 @@ opacity: 0.9;
                                 </ul>
                             </div>-->
                             <div class="col-md-12">
-                                <h2 style="color: white"> List of Purchase Orders </h2>                                
+                                <h2 style="color: black"> List of Purchase Orders </h2>                                
                             </div>                           
              			<div style="margin-top: 10px">
 							<div>
- 							 	<table class="table" width="450" frame=border rules=groups  style="color:white; text-align: left;">
+ 							 	<table class="table" width="450" frame=border rules=groups  style="color:black; text-align: left;">
                                     <thead>
                                         <tr>
                                             <th>PURCHASE_ORDERID</th>
@@ -302,8 +305,8 @@ opacity: 0.9;
                                     </thead>
                                     <tbody ng-repeat="porder in purorder">
                                         <tr>
-                                            <td ng-click="openPO({{porder.pid}})">{{porder.pid}}</td>
-                                            <td>{{porder.status}}</td>
+                                            <td ng-click="openPO()">{{porder.poid}}</td>
+                                            <td>Seller Reviewed</td>
                                             
                                         </tr>
                                     </tbody>
