--- a/src/main/webapp/pages/teame_funding/purchase_request_review.html
+++ b/src/main/webapp/pages/teame_funding/purchase_request_review.html
@@ -92,7 +92,7 @@ opacity: 0.9;
             margin:auto; padding:5px;
             padding-left:20px;
             padding-right:20px;
-            background-color:#469c2a;
+            background-color:#898989;
             box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.2);
             color:rgba(255,255,255,0.9);
             border:0px;
@@ -106,7 +106,7 @@ opacity: 0.9;
             margin:auto; padding:5px;
             padding-left:20px;
             padding-right:20px;
-            background-color:#469c2a;
+            background-color:#898989;
             box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.2);
             color:rgba(255,255,255,0.9);
             border:0px;
@@ -115,7 +115,7 @@ opacity: 0.9;
     </style>
 </head>
 
-<body ng-app="purchase_request" ng-controller="purchase_request_Ctrl" onload="loadPRSeller()">
+<body ng-app="purchase_request" ng-controller="purchase_request_Ctrl" ng-init="loadPRSeller()">
 
     <div id="wrapper">
 
@@ -270,10 +270,10 @@ opacity: 0.9;
 
         <div style="margin-top: 10px">
             <div class="row">
-                <div class="col-sm-offset-1 col-sm-8 jumbotron" style="padding-top:0px; height:auto; border-radius: 20px; text-align: center; background-color:#555">
+                <div class="col-sm-offset-1 col-sm-8 jumbotron" style="padding-top:0px; height:auto; border-radius: 20px; text-align: center; background-color:#d3d3d3">
                     <div class="row">
-                        <div class="col-sm-12" style="background-color:#337ab7; border-radius: 20px 20px 0px 0px;"><br><br>
-                            <p style="font-size: 250%; color: white"><b>FUNDING MANAGEMENT</b></p>
+                        <div class="col-sm-12" style="background-color:#a9a9a9; border-radius: 20px 20px 0px 0px;"><br><br>
+                            <p style="font-size: 250%; color: black"><b>FUNDING MANAGEMENT</b></p>
                         </div>
                     </div>
                     <div class="container">
@@ -287,7 +287,7 @@ opacity: 0.9;
                                 </ul>
                             </div>-->
                             <div class="col-md-12">
-                                <h2 style="color: white"> PURCHASE REQUEST </h2>                                
+                                <h2 style="color: black"> PURCHASE REQUEST </h2>                                
                             </div>
                             <div class="col-md-6">
                                 <form>
@@ -314,7 +314,7 @@ opacity: 0.9;
                                             <div class = "FormInputLabels">
                                                 <p style="margin-bottom: 0px"><b>Buyer's Credit Rating</b> </p>
                                             </div>
-                                            <input type="text" name="BCR" class = "FormTextInputs"  ng-model="BCR" ng-disabled="true" />
+                                            <input type="text" name="BCR" class = "FormTextInputs"  ng-model="BCR" ng-disabled="true" text="700"/>
                                         </div>
                                     </div>
                                     <br>
@@ -371,7 +371,7 @@ opacity: 0.9;
                                             <div class = "FormInputLabels">
                                                 <p style="margin-bottom: 0px"><b>Discount rate</b> </p>
                                             </div>
-                                            <input type="text" name="DiscountRate" class = "FormTextInputs"  ng-model="DiscountRate" ng-disabled="true" />
+                                            <input type="text" name="DiscountRate" class = "FormTextInputs"  ng-model="DiscountRate" ng-disabled="true" value="5" />
                                         </div>
                                     </div>
                                     <br>
@@ -399,13 +399,12 @@ opacity: 0.9;
 
                         <div class="row">
                             <div class="col-md-12">
-                                <h2 style="color: white">INVOICE LIST</h2>
+                                <h2 style="color: black">INVOICE LIST</h2>
                             </div>
                             <div>
                                 <table class="table table-striped">
                                     <thread>
                                         <tr>
-                                        	<th><input type="checkbox" disabled /></th>
                                             <th>Invoice Date</th>
                                             <th>Invoice DueDate</th>
                                             <th>Payment DueDate</th>
