--- a/src/main/webapp/pages/teame_funding/reason_for_override.html
+++ b/src/main/webapp/pages/teame_funding/reason_for_override.html
@@ -57,7 +57,7 @@ opacity: 0.9;
         .MyInputSpan {
             border-radius: 20px 0px 0px 20px; 
             width:40%;
-            background-color: #337ab7;
+            background-color: #a9a9a9;
             color:#f5f5f5; 
             border:0px;
         }
@@ -76,13 +76,13 @@ opacity: 0.9;
         }
 
         #submitLogin {
-            width:50%;
+            width:70%;
             border-radius:20px;
             display: block;
             margin:auto; padding:5px;
             padding-left:20px;
             padding-right:20px;
-            background-color:#469c2a;
+            background-color:#898989;
             box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.2);
             color:rgba(255,255,255,0.9);
             border:0px;
@@ -187,7 +187,7 @@ opacity: 0.9;
                             <div style="overflow: auto;" >
                                 <a href="#" style="float: left" class="UserName"><h3>Welcome<br>User Name</h3></a>
 
-                                <i style="float: right; padding-right: 10px; padding-top: 5%; padding-bottom: 5%; color:#337ab7;" class="fa fa-user fa-5x"></i>  
+                                <i style="float: right; padding-right: 10px; padding-top: 5%; padding-bottom: 5%; color:#a9a9a9;" class="fa fa-user fa-5x"></i>  
                                
                                 <a class="UserName" style="float: left; padding-bottom:2px">You are a Customer</a>
                             </div>
@@ -247,10 +247,10 @@ opacity: 0.9;
 
         <div style="margin-top: 10px">
             <div class="row">
-                <div class="col-sm-offset-1 col-sm-8 jumbotron" style="padding-top:0px; height:700px; border-radius: 20px; text-align: center; background-color:#555">
+                <div class="col-sm-offset-1 col-sm-8 jumbotron" style="padding-top:0px; height:700px; border-radius: 20px; text-align: center; background-color:#d3d3d3">
                     <div class="row">
-                        <div class="col-sm-12" style="background-color:#337ab7; border-radius: 20px 20px 0px 0px;"><br><br>
-                            <p style="font-size: 250%; color: white"><b>FUNDING MANAGEMENT</b></p>
+                        <div class="col-sm-12" style="background-color:#a9a9a9; border-radius: 20px 20px 0px 0px;"><br><br>
+                            <p style="font-size: 250%; color: black"><b>FUNDING MANAGEMENT</b></p>
                         </div>
                     </div>
                     <div class="container">
@@ -265,15 +265,15 @@ opacity: 0.9;
                             </div>-->
                             <div class="col-md-5" style="margin-top: 150px;" align="right" >
                                 <!--<div style="float: left;"> -->
-                                <p style="color: #ffffff">Reason for manual override</p> <br><br><br><br><br>                              
-                                <p style="color: #ffffff">Manager Name</p>                                 
+                                <p style="color: black">Reason for manual override</p> <br><br><br><br><br>                              
+                                <p style="color: black">Manager Name</p>                                 
                             </div>
                             <div class="col-md-5" style="margin-top: 150px;">
                                 <form id="manual_override">
-                                    <textarea rows="6" cols="50" required style="border-color: #337ab7;  border-width: 1px" ng-model="reason"></textarea>
+                                    <textarea rows="6" cols="50" required style="border-color: #a9a9a9;  border-width: 1px" ng-model="reason"></textarea>
                                 </form><br>
                                 <form id="manager_name">
-                                    <input type="text" name="manager_name" style="width: 375px; border-color: #337ab7;  border-width: 1px;" ng-model="name">
+                                    <input type="text" name="manager_name" style="width: 375px; border-color: #a9a9a9;  border-width: 1px;" ng-model="name">
                                 <div style="clear: both;"></div>                            
                                 </form>
 
@@ -283,7 +283,7 @@ opacity: 0.9;
                                     </div>
                                     <div class="col-md-9" style="margin-top: 20px;" id="LoginSubmitDiv">
                                         <form id="submit">
-                                        <input type="submit" name="submit" id="submitLogin" class="btn btn-primary" ng-click="overRide()">
+                                        <input type="submit" name="submit" id="submitLogin" class="btn btn-primary" ng-click="overRide()" value="Submit">
                                         </form>
                                     </div>
                                 </div>
