--- a/src/main/webapp/pages/invoice/InvoiceCreate.html
+++ b/src/main/webapp/pages/invoice/InvoiceCreate.html
@@ -77,5 +77,6 @@
         </table>
     </fieldset>
     <input type="button" value="Go to Update" ng-click="createInvoiceFunc()" />
+   <input type="button" value="Cancel" ng-click="gotoland()" />
 </div>
 </div>
