--- a/src/main/webapp/pages/invoice/InvoiceDeleteConfirm.html
+++ b/src/main/webapp/pages/invoice/InvoiceDeleteConfirm.html
@@ -39,6 +39,8 @@
    				</table>
    				</fieldset>
             <button ng-click="deleteresultfunc()">Delete</button>
+            
+            <input type="button" value="Go To Home" ng-click="gotoland()" />
    		</div>
 </div>
 
