--- a/src/main/webapp/pages/invoice/InvoiceIndex.html
+++ b/src/main/webapp/pages/invoice/InvoiceIndex.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <title>Supply Chain Finance - Invoice Management</title>
 
 
@@ -182,16 +185,12 @@
                                     <li><a href="#/InvoiceLanding">Invoice Profile</a>
                                     </li>
                                     <li><a href="#/InvoiceCreate">Create Invoice</a>
-                                    </li>
-                                    <li><a href="#/InvoiceView">View Invoice</a>
-                                    </li>
+                                    </li>  
                                     <li><a href="#/InvoiceUpdate">Update Invoice</a>
                                     </li>
                                     <li><a href="#/InvoiceSearch">Search Invoice</a>
                                     </li>
                                     <li><a href="#/InvoiceDeleteConfirm">Delete Invoice</a>
-                                    </li>
-                                    <li><a href="#/UploadInvoice">Upload Invoices in bulk</a>
                                     </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
@@ -225,5 +224,14 @@
         </div>
      </div>
 </body>
-
+<script src="g.resources/jquery.min.js"></script>
+        <!-- Bootstrap Core JavaScript -->
+        <script src="g.resources/bootstrap.min.js"></script>
+        <!-- Metis Menu Plugin JavaScript -->
+        <script src="g.resources/metisMenu.min.js"></script>	
+		<script src="g.resources/raphael.min.js"></script>
+        <script src="g.resources/morris.min.js"></script>
+        <script src="g.resources/morris-data.js"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="g.resources/sb-admin-2.js"></script>
 </html>
