--- a/src/main/webapp/pages/invoice/InvoiceSearch.html
+++ b/src/main/webapp/pages/invoice/InvoiceSearch.html
@@ -22,7 +22,7 @@
    			<legend><b>Product Details</b></legend>
    			</br>
    			</br>
-   			<table  border=1 class="table table-striped table-bordered table-hover">
+   				<table  border=1 class="table table-striped table-bordered table-hover">
    					<tr>
 
    						<th>Product Id</th>
@@ -42,6 +42,10 @@
                     </tr>
                     <tr><td colspan="4" border="0"></td><td><b>Total</b></td><td>{{invoice.invoiceAmount}}</td></tr>
    				</table>
+   				<br>
+   				<input type="button" value="Go To Home" ng-click="gotoland()" />
    				</fieldset>
         </div>
+         <hr>
+       
     </div>
