--- a/src/main/webapp/pages/teamg_accounting/ACMindex.html
+++ b/src/main/webapp/pages/teamg_accounting/ACMindex.html
@@ -154,7 +154,7 @@
                                 <div style="overflow: auto;" >
                                     <a href="#" style="float: left" class="UserName"><h3>Welcome<br>User Name</h3></a>
                                     <i style="float: right; padding-right: 10px; padding-top: 5%; padding-bottom: 5%; color:#337ab7;" class="fa fa-user fa-5x"></i>  
-                                    <a class="UserName" style="float: left; padding-bottom:2px">You are a Customer</a>
+                                    <a class="UserName" style="float: left; padding-bottom:2px">You are a bank user</a>
                                 </div>
                             </li>
                             <li>
