--- a/src/main/webapp/pages/teamc_contract2/landingPage.html
+++ b/src/main/webapp/pages/teamc_contract2/landingPage.html
@@ -334,7 +334,7 @@
         var JSON_length;
         var feature_length = {};
         var contracts_temp = {};
-        var uri = "http://localhost:8080/scm/service/";
+        var uri = "/service/";
 
         app.controller('ViewController', function($scope, $http, $location){
            $scope.openContract = function(status) {
