--- a/src/main/webapp/pages/teamc_contract2/mainPage3.html
+++ b/src/main/webapp/pages/teamc_contract2/mainPage3.html
@@ -543,7 +543,7 @@
         var feature_length = {};
         var selectedPaymentTerms = "";
         var selectedDeliveryTerms = "";
-        var uri = "http://localhost:8080/scm/service/";
+        var uri = "/service/";
 
         app.controller('ViewController', function($scope, $http){
             $scope.showModal = false;
