--- a/src/main/webapp/pages/teamd_payments/payment.html
+++ b/src/main/webapp/pages/teamd_payments/payment.html
@@ -489,7 +489,7 @@
 												
 													$http({
 											            method: 'POST',
-											            url: BASE_PATH+"/service/Transactions/initTransaction',
+											            url: BASE_PATH+"/service/Transactions/initTransaction",
 											            headers: {'Content-Type': 'text/plain'},
 											            data: {
 															sender : $scope.buyerId,
