--- a/src/main/webapp/pages/teame_funding/porderlist_bankuser.html
+++ b/src/main/webapp/pages/teame_funding/porderlist_bankuser.html
@@ -240,10 +240,10 @@ opacity: 0.9;
                             <a href="#"> Purchase Order <i class="fa fa-file-text-o"></i>   <span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="http://localhost:8090/scm/pages/teame_funding/porderlist_bankuser.html">List</a>
+                                    <a href="/pages/teame_funding/porderlist_bankuser.html">List</a>
                                 </li> 
                                 <li>
-                                    <a href="http://localhost:8090/scm/pages/teame_funding/libor.html">LIBOR</a>
+                                    <a href="/pages/teame_funding/libor.html">LIBOR</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
