--- a/src/main/webapp/pages/teamg_accounting/coaList.html
+++ b/src/main/webapp/pages/teamg_accounting/coaList.html
@@ -11,7 +11,7 @@
 
 <body ng-app="acmApp" ng-controller="coaListCtrl">
 <div id='chartList'><!-- 
-<form action="http://localhost:8089/scm/ACM/delCOA" method="post"> -->
+<form action="/ACM/delCOA" method="post"> -->
 
 <div class="container">
   <div class="table-responsive">          
